--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "next": "15.5.6",
+    "nextjs-toploader": "^3.9.17",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0"
